--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ body {
   background-color: #f5f5f5;
 }
 
+section {
+  margin-bottom: 40px;
+}
+
 header {
   background-color: #004080;
   color: white;
