--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,21 @@ main {
   padding: 20px;
 }
 
+.youtube-video {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 300px;
+    height: 170px;
+    z-index: 1000; 
+}
+
+.youtube-video iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
 footer {
   text-align: center;
   padding: 10px;
